deployment/psql/service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: postgresdb-service
  labels:
    app: postgresdb
spec:
  # Choose how to expose your service
  type: ClusterIP
  ports:
    - name: http
      # The port number to expose the service
      port: 5432
      protocol: TCP
      targetPort: 5432
  # Pod to route service traffic  
  selector:
    app: postgresdb
