deployment/psql/psql-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresdb-ingress
spec:
  rules:
    - host: myapp.example.com # Your domain name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgresdb-service # Your Service name
                port:
                  number: 80
