deployment/psql/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: postgresdb
  labels:
    app: postgresdb-route
  annotations:
spec:
  host: "db-test2694.apps.ir-thr-ba1.arvanpaas.ir" # Don't use / in the end of the url. the url(subdomain) should conform to DNS 952 subdomain conventions.. (host must conform to DNS 952 subdomain conventions)
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: postgresdb-service
    weight: 100
  wildcardPolicy: None
